[taotao-cloud-project-1434] update[ redis ]